change button color / delete Faq categories page / rename Faq question container / fix button overlap

--- a/containers/Faq/styles.scss
+++ b/containers/Faq/styles.scss
@@ -517,7 +517,7 @@
     .faq_back_button{
       top: 80px;
       position: fixed;
-      z-index: 5;
+      z-index: 2;
       left: 0;
       right: 0;
       border-radius: 0;
